--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8" />
-    <title>Jason Hissong Portfolio</title>
+    <title>Hissong</title>
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="styles.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
@@ -16,7 +16,7 @@
  
         <button onclick="showProject1()" class="project1button active-button">
             <span class="sender">OZNATURALS</span><br>
-            <span class=subjectline">Eye Cream</span><br>
+            <span class="subjectline">Eye Cream</span><br>
             <span class="preheader">An email a part of an automated campaign which triggered if an individual visited the website and if they were not part of the campaign within the last 30 days. </span>
         </button>
         <button class="project2button" class="bold" onclick="showProject2()">
